# mcp-gsuite

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  verify_service_account.py
config/: .env.example
docs/: architecture.md  context.md  decisions.md  deployment.md  edge-cases.md  eval.md  implementation-plan.md
src/: exceptions.py  server.py
src/auth/: google_auth.py
src/tools/: __init__.py  docs.py  gmail.py
tests/integration/: test_live_tools.py
tests/unit/: test_auth.py  test_docs.py  test_gmail.py
